--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wedding Invitation #2</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <div class="header">
         <div class="overlay"></div>
     </div>
     <ul class="container navbar">
-        <li class="circle-behind"><a href="#reminder">Time in Big Day</a></li>
+        <li class="circle-behind"><a href="#reminder">Time until Big Day</a></li>
         <li class="circle-behind"><a href="#wedding-info">The Wedding</a></li>
     </ul>
     <div class="section reminder-container" id="reminder">
-        <h2>Time Remaining for Big Day</h2>
+        <h2>Time Remaining until Big Day</h2>
         <div class="container reminder" id="reminder-clock">
             <div>
                 <span class="days">00</span>
@@ -38,21 +36,17 @@
         </div>
         <!-- Love symbols -->
         <div class="love-symbol">❤️</div>
-      >
-       
     </div>
     <div class="section wedding" id="wedding-info">
         <div class="text-container">
-            <h2>We invite you to celebrate our wedding at</h3>
+            <h2>We invite you to celebrate our wedding at</h2>
             <h3>Syndicate Auditorium, Chemmalasseri</h3>
             <h4>4 PM to 8 PM, 17th August 2024</h4>
             <button onclick="window.location.href='https://maps.app.goo.gl/xf9KKqKqP3CVcHz79?g_st=iw'">Get Location</button>
         </div>
         <!-- Love symbols -->
         <div class="love-symbol">❤️</div>
-      >
     </div>
     <script src="index.js"></script>
 </body>
-
 </html>
