--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wedding Invitation #2</title>
+    <title>Wedding Invitation</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">
+    <header class="header">
         <img id="background-image" src="favazzz.png" alt="Wedding Invitation Background" />
         <div class="header-content">
+            <h1>Wedding Invitation</h1>
+            <p>Join us on our special day!</p>
         </div>
-    </div>
+    </header>
     <nav class="navbar">
         <ul>
             <li><a href="#reminder">Time until Big Day</a></li>
