--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header class="header">
         <img id="background-image" src="favazzz.png" alt="Wedding Invitation Background" />
         <div class="header-content">
-            <h1>Wedding Invitation</h1>
-            <p>Join us on our special day!</p>
+            <!-- <h1>Wedding Invitation</h1>
+            <p>Join us on our special day!</p> -->
         </div>
     </header>
     <nav class="navbar">
