--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wedding Invitation</title>
     <link rel="stylesheet" href="style.css">
+    <!-- Open Graph meta tags -->
+    <meta property="og:title" content="Favaz and Shymila Wedding">
+    <meta property="og:description" content="Join us on our special day!">
+    <meta property="og:image" content="favazzz.png">
+    <meta property="og:url" content="https://favas111.github.io">
+    <meta property="og:type" content="website">
 </head>
 <body>
     <header class="header">
         <img id="background-image" src="favazzz.png" alt="Wedding Invitation Background" />
         <div class="header-content">
-            <!-- <h1>Wedding Invitation</h1>
-            <p>Join us on our special day!</p> -->
+
         </div>
     </header>
     <nav class="navbar">
