--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <!-- Open Graph meta tags -->
     <meta property="og:title" content="Favaz and Shymila Wedding">
     <meta property="og:description" content="Join us on our special day!">
-    <meta property="og:image" content="favazzz.png">
+    <meta property="og:image" content="ff.jpg">
     <meta property="og:url" content="https://favas111.github.io">
     <meta property="og:type" content="website">
 </head>
 <body>
     <header class="header">
-        <img id="background-image" src="favazzz.png" alt="Wedding Invitation Background" />
+        <img id="background-image" src="fvzshy.png" alt="Wedding Invitation Background" />
         <div class="header-content">
 
         </div>
